--- a/styles/game.css
+++ b/styles/game.css
@@ -5,10 +5,21 @@ body {
     background: #eee;
 }
 
+@font-face {
+    font-family: 'press_start_2pregular';
+    src: url('/webfontkit/pressstart2p-webfont.eot');
+    src: url('/webfontkit/pressstart2p-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/webfontkit/pressstart2p-webfont.woff') format('woff'),
+         url('/webfontkit/pressstart2p-webfont.ttf') format('truetype'),
+         url('/webfontkit/pressstart2p-webfont.svg#press_start_2pregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 #FlappyDevGame {
     width: 500px;
     height: 500px;
-    background: #fff;
+    background: #4A365B;
     -ms-touch-action: none;
 }
