--- a/styles/game.css
+++ b/styles/game.css
@@ -7,11 +7,11 @@ body {
 
 @font-face {
     font-family: 'press_start_2pregular';
-    src: url('/webfontkit/pressstart2p-webfont.eot');
-    src: url('/webfontkit/pressstart2p-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/webfontkit/pressstart2p-webfont.woff') format('woff'),
-         url('/webfontkit/pressstart2p-webfont.ttf') format('truetype'),
-         url('/webfontkit/pressstart2p-webfont.svg#press_start_2pregular') format('svg');
+    src: url('../webfontkit/pressstart2p-webfont.eot');
+    src: url('../webfontkit/pressstart2p-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../webfontkit/pressstart2p-webfont.woff') format('woff'),
+         url('../webfontkit/pressstart2p-webfont.ttf') format('truetype'),
+         url('../webfontkit/pressstart2p-webfont.svg#press_start_2pregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
